@@ -31,8 +31,7 @@ public class Location {
 
   @Override
   public String toString() {
-    return String.format("%s, %s"
-            , uri != null ? uri : "<URI_MISSING>"
-            , region != null ? region.toString() : "n/a");
+    return "%s, %s".formatted(uri != null ? uri : "<URI_MISSING>"
+    , region != null ? region.toString() : "n/a");
   }
 }
